crates/pcb-kicad-sch/tests/snapshots/analysis_flow__kicad_project_reduces_to_connectivity_graph.snap
---
source: crates/pcb-kicad-sch/tests/analysis_flow.rs
expression: fixture.kicad_connectivity()
---
ConnectivityGraph {
    components: [
        ComponentNode {
            managed_slot: Some(
                SymbolSlotKey {
                    component_path: "R1.R",
                    unit: 1,
                },
            ),
            origin: KiCad(
                SymbolLocation {
                    page_id: "67ba23f6-8b58-5596-9d28-7774b90e1e12",
                    symbol_id: "d527c2b8-3606-5386-bbed-5a45ed7b31a6",
                },
            ),
        },
        ComponentNode {
            managed_slot: Some(
                SymbolSlotKey {
                    component_path: "R2.R",
                    unit: 1,
                },
            ),
            origin: KiCad(
                SymbolLocation {
                    page_id: "67ba23f6-8b58-5596-9d28-7774b90e1e12",
                    symbol_id: "cda8dfca-6e8a-59fd-87a2-5ff0162348de",
                },
            ),
        },
    ],
    groups: [
        ConnectionGroup {
            names: {},
            terminals: {
                ComponentPin {
                    component: ManagedPath(
                        "R1.R",
                    ),
                    pin_name: "",
                    pin_numbers: {
                        "1",
                    },
                },
            },
            origins: {
                KiCadIsland(
                    IslandRef {
                        page_id: "67ba23f6-8b58-5596-9d28-7774b90e1e12",
                        index: 0,
                    },
                ),
            },
        },
        ConnectionGroup {
            names: {},
            terminals: {
                ComponentPin {
                    component: ManagedPath(
                        "R1.R",
                    ),
                    pin_name: "",
                    pin_numbers: {
                        "2",
                    },
                },
                ComponentPin {
                    component: ManagedPath(
                        "R2.R",
                    ),
                    pin_name: "",
                    pin_numbers: {
                        "1",
                    },
                },
            },
            origins: {
                KiCadIsland(
                    IslandRef {
                        page_id: "67ba23f6-8b58-5596-9d28-7774b90e1e12",
                        index: 1,
                    },
                ),
            },
        },
        ConnectionGroup {
            names: {},
            terminals: {
                ComponentPin {
                    component: ManagedPath(
                        "R2.R",
                    ),
                    pin_name: "",
                    pin_numbers: {
                        "2",
                    },
                },
            },
            origins: {
                KiCadIsland(
                    IslandRef {
                        page_id: "67ba23f6-8b58-5596-9d28-7774b90e1e12",
                        index: 2,
                    },
                ),
            },
        },
    ],
}
